add_subdirectory(event)

target_sources(
    vk_base
    PRIVATE
        Buffer.cpp
        Device.cpp
        ExclusiveQueue.cpp
        FrameClock.cpp
        Image.cpp
        ImageUtils.cpp
        Memory.cpp
        MemoryPool.cpp
        PhysicalDevice.cpp
        QueueManager.cpp
        ShaderProgram.cpp
        Swapchain.cpp
        VulkanBase.cpp
        VulkanDebug.cpp
        VulkanInstance.cpp
)
